Tabs on mobile phone, only text clickable - make full width of tab clickable instead closes https://github.com/OpenACalendar/OpenACalendar-Web-Core/issues/384

--- a/core/theme/default/css/libIndexAndSite/main.less
+++ b/core/theme/default/css/libIndexAndSite/main.less
@@ -602,6 +602,9 @@ div.filterListEventWrapper {
 			a {
 				color: black;
 				text-decoration: none;
+				@media screen and (max-width: @narrowScreensMakeEverythingHorizontalIntoVerticalBoundary) {
+					display:block;
+				}
 			}
 			a:hover, a:focus {
 				color: blue;
